--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body{
     text-align: center;
 }
 
-#myCanvas{
+#carCanvas{
     background: lightgray;
+}
+
+#networkCanvas{
+    background: black;
 }
