--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body{
     align-items: center;
 }
 
+#speedText, #mutationText, #carsText{
+    text-align: center;
+    margin-bottom: 5px;
+}
+
+
 #verticalButtons{
     display: flex;
     flex-direction: column;
